Improve movie poll perfomance by addding needed into to poll-item. Improve movie-dialog-loading. Improve dark mode. Create google-login-button style. Improve nick login.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,20 @@
     <mat-icon>add</mat-icon>
   </button>
   <!-- <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span> -->
+  <div class="application-logo-container">
+    <img
+      class="application-logo"
+      (click)="goToRoot()"
+      src="/assets/img/poll-a-lot-logo-white.svg"
+      alt=""
+    />
+  </div>
+
   <img
     class="application-name"
     (click)="goToRoot()"
-    [src]="'/assets/poll-a-lot.svg'"
-    alt="Poll A Lot logo"
+    src="/assets/poll-a-lot.svg"
+    alt="Poll A Lot text logo"
   />
 
   <mat-menu #appMenu="matMenu">
