--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,21 @@
 <mat-card class="container">
+  <img
+    class="poll-a-lot-header"
+    src="/assets/img/poll-a-lot-movie-header.svg"
+    alt="Popcorn, movie tickets and other movie related graphics"
+  />
   <p>
-    🍹🍿🎬🌴📺👾🎉<br/>
-    Easily create polls of movies, TV series or just about anything and share them with you friends.<br/>Make choosing easy with random draw!<br/><br/>
+    <!-- 🍹🍿🎬🌴📺👾🎉<br /> -->
+    Easily create polls of movies, TV series or just about anything and share
+    them with you friends.<br />Make choosing easy with random draw!<br /><br />
     Yay! 👏
   </p>
-  <button mat-raised-button  color="primary" (click)="createPoll()" aria-label="Create poll">Create poll</button>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="createPoll()"
+    aria-label="Create poll"
+  >
+    Create poll
+  </button>
 </mat-card>
