--- a/src/app/movie-poll-item/movie-score/movie-score.component.scss
+++ b/src/app/movie-poll-item/movie-score/movie-score.component.scss
@@ -78,3 +78,10 @@
     }
   }
 }
+
+.loading-movie-score {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
