--- a/src/app/poll-management/poll-management.component.html
+++ b/src/app/poll-management/poll-management.component.html
@@ -94,12 +94,11 @@
         >Read more!</a
       >
     </p>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="login()"
-      aria-label="Login"
-    >
+    <button class="button google" (click)="login()">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
+        class="flex self-center pr2"
+      />
       Login with Google
     </button>
   </mat-card>
