--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -375,5 +375,10 @@
     .mdc-floating-label.mat-mdc-floating-label {
       top: 23px;
     }
+
+    .mat-mdc-select-min-line {
+      position: relative;
+      bottom: 6px;
+    }
   }
 }
