Fixes error if movie is missing a tagline.

--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -159,7 +159,7 @@
                     class="tagline"
                     *ngIf="
                       status.pollItem?.moviePollItemData?.tagline ||
-                      status.movie.tagline
+                      status.movie?.tagline
                     "
                   >
                     "{{
