Add release sorting option for movie polls.

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -122,8 +122,9 @@
           >
             <mat-option value="smart">Smart</mat-option>
             <mat-option value="regular">Votes</mat-option>
-            <mat-option value="score">Score</mat-option>
             <mat-option value="title">Title</mat-option>
+            <mat-option value="score">Score</mat-option>
+            <mat-option value="release">Release</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
