--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -122,6 +122,7 @@
           >
             <mat-option value="smart">Smart</mat-option>
             <mat-option value="regular">Votes</mat-option>
+            <div class="divider"></div>
             <mat-option value="title">Title</mat-option>
             <mat-option value="score">Score</mat-option>
             <mat-option value="release">Release</mat-option>
